# idevicedata

./: .gitignore  Makefile.am  README  configure.ac  reconf
m4/: Makefile.am
src/: AddressBook.cpp  AddressBook.h  AddressBookDatabase.cpp  AddressBookDatabase.h  AddressBookExportHTML.cpp  AddressBookExportHTML.h  AddressBookExportSummary.h  AddressBookMemory.cpp  AddressBookMemory.h  Makefile.am  MessagesChatRecord.h  MessagesChatRecordLoader.cpp  MessagesChatRecordLoader.h  MessagesHandleRecordLoader.h  MessagesMessageRecord.h  MessagesMessageRecordLoader.cpp  MessagesMessageRecordLoader.h  idd_addressbook.cpp  idd_common.cpp  idd_common.h  idd_messages.cpp  idd_photos.cpp  main.cpp
src/AddressBook/: AddressBook.cpp  AddressBook.h  AddressBookExportHTML.cpp  AddressBookExportSummary.cpp  AddressBookMemory.cpp  AddressBookMemory.h  Database.cpp  Database.h  ExportHTML.cpp  ExportSummary.cpp  Memory.cpp  Memory.h
src/Messages/: ChatRecordLoader.cpp  ChatRecordLoader.h  HandleRecord.h  HandleRecordLoader.cpp  HandleRecordLoader.h  MessageRecordLoader.cpp  MessageRecordLoader.h  MessagesChatRecord.h  MessagesChatRecordLoader.cpp  MessagesHandleRecordLoader.cpp
src/Photos/: GenericAssetRecord.h  GenericAssetRecordLoader.cpp  GenericAssetRecordLoader.h
tests/: Makefile.am  test_sqlite3_compilation.cpp
