# Copyright (C) 2012 Assaf Gordon <gordon@cshl.edu>
#
# This file is free software; as a special exception the author gives
# unlimited permission to copy and/or distribute it, with or without
# modifications, as long as this notice is preserved.
#
# This program is distributed in the hope that it will be useful, but
# WITHOUT ANY WARRANTY, to the extent permitted by law; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.

check_PROGRAMS = test_sqlite3_compilation

TESTS = $(check_PROGRAMS)

test_sqlite3_compilation_SOURCES = test_sqlite3_compilation.cpp
test_sqlite3_compilation_CFLAGS = $(SQLITE3_CFLAGS)
test_sqlite3_compilation_LDFLAGS = $(SQLITE3_LDFLAGS)
